# SynapzCore

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP_OPENSOURCE.md  SECURITY.md  relaunch_antigravity_cdp.bat  structure.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
Agent_Profiles/: Antigravity.md  GEMINI.md.example  Grok.json  How_We_Work.md
crates/agt-mcp/: Cargo.toml
crates/agt-mcp/src/: main.rs
crates/agt-memory/: Cargo.toml
crates/agt-memory/src/: lib.rs  queue.rs  supabase.rs
crates/agt-memory/tests/: supabase_test.rs
crates/agt-tools/: Cargo.toml
crates/agt-tools/src/: cdp_controller.rs  file.rs  goals.rs  grok.rs  lib.rs  memory.rs  reflection.rs  shell.rs  web.rs
crates/synapz-mcp/src/: main.rs
crates/synapz-memory/src/: lib.rs  queue.rs  supabase.rs
crates/synapz-memory/tests/: supabase_test.rs
crates/synapz-orchestrator/examples/: builder_pipeline.json
crates/synapz-orchestrator/src/: agent.rs  coordinator.rs  git_isolation.rs  main.rs  parallel_executor.rs  pipeline.rs  planner.rs  (+7 more)
examples/: README.md  demo_graph.json
scripts/: agent_sdk.py  ask_grok.ps1  coordination.py  dashboard.html  dashboard2.css  dashboard2.html  dashboard2.js  dashboard_server.py  extract_knowledge.js  extract_knowledge_v2.js  generate_skills_index.ps1  migration_v1_shared_memory.sql  run_brain_cron.bat  run_grok_local.bat  test_coordination.py  test_e2e_http.py  verify_chat.mjs  workflow_editor.html
scripts/grok_cookie_refresh/: cookie_refresh_v2.js
(+8 files in other folders)
